tests/ui/inference/cyclic-subtype-push-128397.next.stderr
error[E0308]: mismatched types
  --> $DIR/cyclic-subtype-push-128397.rs:18:12
   |
LL |     v.push(x);
   |       ---- ^ recursive type with infinite-size name
   |       |
   |       arguments to this method are incorrect
   |
note: method defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
